--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./index.js"
+    "dev": "nodemon ./index.js",
+    "db-build": "node ./dbBuilder.js"
+    
   },
   "keywords": [],
   "author": "",
@@ -16,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mysql-await": "^2.2.3",
     "mysql2": "^3.6.0",
     "sequelize": "^6.32.1"
   },
