full refactoring of current api to rely on mysql-await and integration with front end

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./index.js",
-    "db-build": "node ./dbBuilder.js"
+    "db-migrate": "node ./dbBuilder.js"
     
   },
   "keywords": [],
