--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "dev": "nodemon ./index.js",
     "db-migrate": "node ./dbBuilder.js"
-    
   },
   "keywords": [],
   "author": "",
@@ -18,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql-await": "^2.2.3",
     "mysql2": "^3.6.0",
     "sequelize": "^6.32.1"
