--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ DB_Name
 DB_USER
 DB_PASSWORD
 DB_HOST
-TOKEN_SECRET
 SALT_ROUNDS
-TOKEN_SECRET_STUDENT
+TOKEN_SECRET_LEVELONE
+TOKEN_SECRET_LEVELTWO
