--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql-await": "^2.2.3",
     "mysql2": "^3.6.5",
+    "node-schedule": "^2.1.1",
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
