--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mysql-await": "^2.2.3",
     "mysql2": "^3.6.5",
     "node-schedule": "^2.1.1",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
